# gramods

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  DESCRIPTION.txt  LICENSE  README.md
apps/aruco/: CMakeLists.txt
apps/gm-demo-audio-capture/: CMakeLists.txt
apps/gm-demo-audio-capture/src/: main.cpp
apps/gm-demo-end-fit/: CMakeLists.txt
apps/gm-demo-end-fit/src/: SDLWindow.cpp  SDLWindow.hh  main.cpp
apps/gm-demo-multitouch/: CMakeLists.txt
apps/gm-demo-multitouch/src/: SDLWindow.cpp  SDLWindow.hh  main.cpp
apps/gm-demo-osg/: CMakeLists.txt
apps/gm-demo-osg/config/: desktop-multi.xml  desktop-single.xml
apps/gm-demo-osg/resources/: box.osgt  sphere.osgt
apps/gm-demo-osg/src/: MyApp.cpp  MyApp.hh  main.cpp
apps/gm-demo-polyfit/: CMakeLists.txt
apps/gm-demo-polyfit/src/: SDLContext.cpp  SDLContext.hh  SDLWindow.cpp  SDLWindow.hh  main.cpp
apps/gm-load/: CMakeLists.txt
apps/gm-load/config/: C-dome-test.xml  Sdl_HD_Window.xml  anaglyphs-test.xml  cubes-test.xml  fisheye-test.xml  latlong-test.xml  posed-spherical-test.xml  spatial-spherical-test.xml  spherical-test.xml  tiles-test.xml
apps/gm-load/src/: main.cpp
apps/gm-microphone-registration/: CMakeLists.txt
apps/gm-microphone-registration/config/: sound-burst-detector-w-openal.xml
apps/gm-microphone-registration/src/: main.cpp
apps/gm-openvr-list-devices/: CMakeLists.txt
apps/gm-openvr-list-devices/src/: main.cpp
apps/gm-projection-registration/: CMakeLists.txt
apps/gm-projection-registration/src/: main.cpp
apps/gm-track/: CMakeLists.txt
apps/gm-track/include/: BaseEstimator.hh
apps/gm-track/src/: BaseEstimator.cpp  base.cpp  measure.cpp
apps/gm-tracker-pivotpoint/: CMakeLists.txt
apps/gm-tracker-pivotpoint/src/: main.cpp
apps/gm-tracker-registration/: CMakeLists.txt
apps/gm-tracker-registration/src/: main.cpp
apps/gm-tracker-sampler/: CMakeLists.txt
apps/gm-tracker-sampler/src/: main.cpp
modules/gmConfig/: CMakeLists.txt
modules/gmConfig/src/: Configuration.cpp  ImportLibrary.cpp  OFactory.cpp  OFactoryNode.cpp
modules/gmCore/: CMakeLists.txt
modules/gmCore/src/: CommandLineParser.cpp  Configuration.cpp  Console.cpp  ExitLock.cpp  FileResolver.cpp  FreeImage.cpp  ImportLibrary.cpp  LogFileMessageSink.cpp  MessageSink.cpp  NullMessageSink.cpp  OFactory.cpp  OStreamMessageSink.cpp  OpenVR.cpp  Pose.cpp  SdlContext.cpp  TimeTools.cpp  Updateable.cpp  angle.cpp  config_cmake.hh  eigen.cpp  io_angle.cpp  io_eigen.cpp  io_string.cpp  io_typeid.cpp  path.cpp  tinyxml2.cpp
modules/gmGraphics/: CMakeLists.txt  Pipfile
modules/gmGraphics/config/: test-ChromaKey.xml  test-EquiToAngularFisheye.xml  test-GenerateDomeStereoImage.xml  test-HmdViewOfCubeSet.xml  test-LinearAnaglyphs.xml  test-Mixing-UvcTexture.xml  test-Mixing-weighted.xml  test-ObjRenderer.xml  test-PlaneCorrectedView.xml  test-PoseTransform-pos-rot.xml  test-PoseTransform-rot-center.xml  test-PoseTransform-scale-center.xml  test-PosedSphericalView.xml  test-QuadBufferStereo.xml  test-SkewParallelDiff.xml  test-SpatialSphericalView.xml  test-SphereCorrectedView.xml  test-SphereCorrectedViewDome.xml  test-SphereCorrectedViewInside.xml  test-SphereCorrectionDiff.xml  test-SphereRenderer.xml  test-StereographicRoundTrip.xml  test-StereoscopicTexture.xml  test-TileViewOfCubeSet.xml  test-TileViewOfSphereSet.xml  test-TilesComparingSphericalViews.xml  test-TilesRemapping.xml  test-UvcTexture.xml  test-UvcToChromaKey.xml  test-ViewTexture.xml  test-fisheye-camera-correction.xml  vis-LittlePlanetUniformity.xml  vis-uniformity.xml
modules/gmGraphics/resources/: Pipfile  axes.mtl  color_cubes_texture.py  floor-coordinates.mtl  fur.mtl  gray_fur_texture.py  gray_simple_marble.py  marble.mtl  marble.py  standard_material.mtl
modules/gmGraphics/src/: AABB.cpp  AngularFisheyeCoordinatesMapper.cpp  AngularFisheyeSpatialDomeView.cpp  AngularFisheyeView.cpp  Camera.cpp  ChromaKeyTexture.cpp  ChromaKeyView.cpp  CoordinatesMapper.cpp  CubeMap.cpp  CubeMapRasterProcessor.cpp  CubeSceneRenderer.cpp  EacCoordinatesMapper.cpp  EquirectangularCoordinatesMapper.cpp  EquirectangularView.cpp  Eye.cpp  FisheyeCameraModel.cpp  FovPlanarView.cpp  FreeImage.cpp  FreeImageInitializer.cpp  GLUtils.cpp  Geometry.cpp  Geometry.impl.hh  GeometryCorrectedProjectorView.cpp  Group.cpp  HmdView.cpp  ImageTexture.cpp  InterlaceMultiplexer.cpp  IntersectionLine.cpp  IntersectionVisitor.cpp  LinearAnaglyphsMultiplexer.cpp  MatrixTransform.cpp  MixingShaders.cpp  MixingTexture.cpp  MixingView.cpp  MultiscopicTextureMultiplexer.cpp  MultiscopicTextureSplitter.cpp  MultiscopicView.cpp  Node.cpp  ObjRenderer.cpp  OfflineRenderTarget.cpp  (+45 more)
modules/gmIO/: CMakeLists.txt
modules/gmIO/src/: Console.cpp  MessageSink.cpp  OStreamMessageSink.cpp
modules/gmMisc/: CMakeLists.txt
modules/gmMisc/src/: DelaunayInterpolator.cpp  EFFOAW.cpp  EFHOAW.cpp  FFTW.cpp  PolyFit.cpp  config_cmake.hh
modules/gmNetwork/: CMakeLists.txt
modules/gmNetwork/config/: syncnode-2x-local-0.xml  syncnode-2x-local-1.xml
modules/gmNetwork/src/: DataSync.cpp  ExecutionSynchronization.cpp  NetSync.cpp  PeersConnection.cpp  Protocol.cpp  RunSync.cpp  SimpleDataSynchronization.cpp  SyncData.cpp  SyncNode.cpp  VRPNTracker.cpp  all.cpp  config_cmake.hh
modules/gmSound/: CMakeLists.txt
modules/gmSound/src/: Capture.cpp  CaptureFromWav.cpp  Multilateration.cpp  OpenALCapture.cpp  OpenALContext.cpp  SoundBurstDetector.cpp  SoundDetector.cpp  config_cmake.hh
modules/gmTouch/: CMakeLists.txt
modules/gmTouch/src/: OSGCameraAdaptor.cpp  SDLEventAdaptor.cpp  TUIOEventAdaptor.cpp  TouchState.cpp  config_cmake.hh
modules/gmTrack/: CMakeLists.txt
modules/gmTrack/config/: aruco-complex-test.xml  board-cube-of-2x2.xml  cards-of-3x5.xml
modules/gmTrack/resources/: opencv_4.8_contrib_aruco_create_board_id.patch  (+1 more)
modules/gmTypes/: CMakeLists.txt
modules/gmVideo/: CMakeLists.txt
test/gmConfig/: CMakeLists.txt
test/gmConfig/src/: main.cpp  (+2 more)
test/gmCore/: CMakeLists.txt
test/gmGraphics/: CMakeLists.txt
test/gmIO/: CMakeLists.txt
(+517 files in other folders)
